Catchup merge